<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_fundo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.furb.seca.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/titulo_compromisso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:inputType="text" />

    <EditText
        android:id="@+id/descricao_compromisso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/cbx_dia_inteiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia_inteiro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_do_compromisso"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/data_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/compromisso_data"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/hora_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compromisso_hora"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fim_do_compromisso"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/data_fim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/compromisso_data"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/hora_fim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compromisso_hora"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_disciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disciplina_opcional"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/cbo_disciplinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
<!--  
    <TextView
        android:id="@+id/lbl_lembretes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lembretes_opcional"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txtTempoLemprete"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number" >
        </EditText>

        <Spinner
            android:id="@+id/cboUnidadeTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnGravar"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:text="@string/gravar" />

        <Button
            android:id="@+id/btnExcluir"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excluir" />
    </LinearLayout>

</LinearLayout>